--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "postcss-px-to-viewport": "^1.1.1",
+    "vant": "^2.5.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
