--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss-px-to-viewport": "^1.1.1",
     "vant": "^2.5.9",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
