--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      run: |
+     - run: |
         echo 'step build'
         pwd
         node -v
@@ -18,7 +18,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      run: |
+     - run: |
         echo 'step publish'
         npm -v
         
