--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: BanyqArt deploy
 
 on:
   push:
-    branches: [develop]
+    branches: [master]
 
   workflow_dispatch:
 
@@ -12,8 +12,8 @@ jobs:
     steps:
      - run: |
         echo 'step build'
-        pwd
-        node -v
+        npm install
+        npm run build
         
   publish:
     runs-on: ubuntu-latest
