--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode=development --config ./webpack/dev.js --inline --hot",
     "test": "npm run test",
-    "build": "rm -rf dist && webpack --config ./webpack/build.js"
+    "build": "rm -rf dist && rm -rf node_modules && cnpm install && webpack --config ./webpack/build.js"
   },
   "repository": {
     "type": "git",
