--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/snx1995/banyq-art#readme",
   "dependencies": {
     "sass-loader": "^10.1.1",
+    "vanilla-tilt": "^1.7.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.5"
